# pixopt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: bump-version.yml  ci.yml  docs.yml  release.yml
docs/: api.md  changelog.md  cli.md  contributing.md  index.md  installation.md  library.md
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/changelog/: index.html
site/cli/: index.html
site/contributing/: index.html
site/installation/: index.html
site/search/: search_index.json
src/imgoptimizer/: __init__.py  adaptive_quality.py  constants.py  format_resolver.py  image_ops.py  optimizer.py  smart_format.py  srcset_generator.py  utils.py
src/imgoptimizer/cli/: __init__.py  app.py  options.py  output.py
src/imgoptimizer/cli/commands/: __init__.py  batch.py  compare.py  convert.py  favicon.py  info.py  optimize.py  placeholder.py  srcset.py
src/optimg/: __init__.py  adaptive_quality.py  constants.py  format_resolver.py  image_ops.py  optimizer.py  placeholder.py  smart_format.py  srcset_generator.py  svg_optimizer.py  utils.py
src/optimg/cli/: __init__.py  app.py  options.py  output.py
src/optimg/cli/commands/: __init__.py  batch.py  compare.py  convert.py  favicon.py  info.py  optimize.py  placeholder.py  srcset.py
src/pixopt/: __init__.py  adaptive_quality.py  constants.py  format_resolver.py  html_comparison.py  image_ops.py  models.py  optimizer.py  placeholder.py  smart_format.py  srcset_generator.py  utils.py
src/pixopt/cli/: __init__.py  app.py  options.py  output.py
src/pixopt/cli/commands/: __init__.py  batch.py  compare.py  convert.py  favicon.py  info.py  optimize.py  placeholder.py  srcset.py
tests/: test_core.py
