[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixopt"
version = "0.1.0"
description = "Fast Python image optimizer. Resize, compress, convert, and generate responsive assets."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Mathias Paulenko Echeverz", email = "mathias.paulenko@outlook.com"}
]
keywords = ["image", "optimization", "compression", "webp", "jpeg", "png", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Pillow>=10.0.0",
    "pillow-heif>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "piexif>=1.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "python-semantic-release>=9.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]

[project.scripts]
pixopt = "pixopt.cli:app"

[project.urls]
Homepage = "https://github.com/MathiasPaulenko/pixopt"
Repository = "https://github.com/MathiasPaulenko/pixopt"
Issues = "https://github.com/MathiasPaulenko/pixopt/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pixopt"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/pixopt/__init__.py:__version__"]
build_command = "python -m build"
upload_to_pypi = false
upload_to_release = true
commit_author = "github-actions <actions@github.com>"
commit_message = "chore(release): bump version to {{version}} [skip ci]"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.master]
match = "master"
